# rethinking-strings

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md
include/rethink/: api.h  nullable.h  ref_string.h  rethink.h  shared_string.h  unique_string.h
include/rethink/detail/: ctrl_block.h
src/: rethink.cpp
test/basic/: CMakeLists.txt  basic.cpp  ctrl_block_test.cpp  nullable_test.cpp  ref_string_test.cpp  shared_string_test.cpp  transfer_owner_test.cpp  unique_string_test.cpp
test/size/: CMakeLists.txt  rth.cpp  std.cpp
